--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         </activity>
         <activity
             android:name=".activities.CourseActivity"
-            android:label="@string/title_activity_course"
+            android:parentActivityName=".activities.MainActivity"
             android:theme="@style/AppThemeNoElevation">
         </activity>
     </application>
