--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,26 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.siddhant.routine">
+    package="com.siddhant.routine"  >
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/launcher_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".activities.MainActivity"
-            android:label="@string/title_activity_dashboard"
+            android:name=".Activities.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.CourseActivity"
-            android:parentActivityName=".activities.MainActivity"
+            android:name=".Activities.CourseActivity"
+            android:parentActivityName=".Activities.MainActivity"
+            android:theme="@style/AppThemeNoElevation">
+        </activity>
+        <activity
+            android:name=".Activities.CourseEditActivity"
+            android:parentActivityName=".Activities.CourseActivity"
+            android:windowSoftInputMode="adjustPan"
             android:theme="@style/AppThemeNoElevation">
         </activity>
     </application>
