--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             android:theme="@style/AppThemeNoElevation">
         </activity>
         <activity
-            android:name=".Activities.CourseEditActivity"
+            android:name=".Activities.Context"
             android:parentActivityName=".Activities.CourseActivity"
             android:windowSoftInputMode="adjustPan"
             android:theme="@style/AppThemeNoElevation">
