--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,11 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
+    compile files('libs/gson-2.6.2.jar')
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
-    compile files('libs/gson-2.6.2.jar')
     compile 'com.bignerdranch.android:expandablerecyclerview:2.1.1'
+    compile 'com.android.support:support-v4:23.4.0'
 }
