--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,31 +8,32 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.SplashActivity"
+        <activity
+            android:name=".activities.SplashActivity"
             android:theme="@style/SplashTheme">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activities.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.CourseActivity"
             android:parentActivityName=".activities.MainActivity"
-            android:theme="@style/AppThemeNoElevation"/>
+            android:theme="@style/AppThemeNoElevation" />
         <activity
             android:name=".activities.CourseEditActivity"
             android:parentActivityName=".activities.CourseActivity"
             android:theme="@style/AppThemeNoElevation"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".activities.ModuleUpdateActivity"
             android:parentActivityName=".activities.CourseActivity"
-            android:theme="@style/CustomDialogActivity"/>
+            android:theme="@style/CustomDialogActivity" />
+        <activity android:name=".activities.SettingsActivity"></activity>
     </application>
 
 </manifest>
